app4HashingAndChecksum/microservice1/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app4-microservice1
spec:
  selector:
    app: app4-microservice1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8030
  type: ClusterIP
