app4HashingAndChecksum/microservice1/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app4-microservice1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /hashing/hash
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app4-microservice1
        pathType: Prefix
        backend:
          service:
            name: app4-microservice1
            port:
              number: 80
